6th try autotest

--- a/index.html
+++ b/index.html
@@ -99,14 +99,14 @@
       </nav>
       <ui class="footer__social-list-item">
         <li class="footer__social-link">
-            <img src="/images/yt.svg">
+            <img src="./images/yt.svg">
 
         </li>
         <li class="footer__social-link">
-            <img src="/images/vk.svg">
+            <img src="./images/vk.svg">
         </li>
         <li class="footer__social-icon">
-            <img src="/images/pinterest.svg">
+            <img src="./images/pinterest.svg">
         </li>
       </ui>
     </footer>
