--- a/index.html
+++ b/index.html
@@ -11,36 +11,36 @@
   <body>
     <header>
       <nav class="nav">
-        <ui class="menu">
+        <ul class="menu">
           <li class="menu__option">
           главная
           </li>
-
         <li class="menu__option">
           посмотреть лоты
         </li>
         <li class="menu__option">
           об аукционе
         </li>
-      </ui>
+      </ul>
     </nav>
-      <img class ="header__logo" src="./images/logo-black.svg">
-
-    <div class="address">
+      <a class="header__logo_link">
+        <img class ="header__logo" src="./images/logo-black.svg" alt="logo-black">
+      </a>
+    <section class="address">
       <a href="tel:+70000000">+9 999 555 5555</a>
       <br>
       <a href="mailto:mail@example.com">info@sobaka.ge</a>
       <address>
         наб. Принсенграхт 263- <br>265, Амстердам
       </address>
-    </div>
+    </section>
     </header>
     <div class="cover">
       <h1 class="cover__title">О<span class="cover__title__letter_shift">но</span> <span class="title__mid_line">те<span class="cover__title__letter_shift">бе</span></span> <span class="title__last_line"><span class="cover__title__letter_shift">н</span>адо</span></h1>
       <h2 class="cover__subtitle">Аукцион вещей, в которые никто не верил</h2>
       <button class="bet-button">Сделать ставку</button>
     </div>
-    <div class="lots">
+    <main class="lots">
       <h2 class="lots__heading">Лоты</h2>
       <ul class="lots__card-list">
         <li class="lots__card-list-item">
@@ -69,7 +69,7 @@
       </li>
       </ul>
       <p class="lots_more">посмотреть больше</p>
-    </div>
+    </main>
     <div class="about">
       <div class="about__logo">
       </div>
@@ -82,33 +82,33 @@
       </div>
 
     <footer>
-      <div class="address">
+      <section class="address">
         <a href="tel:+70000000">+9 999 555 5555</a>
         <br>
         <a href="mailto:mail@example.com">info@sobaka.ge</a>
         <address>
           наб. Принсенграхт 263- <br>265, Амстердам
         </address>
-      </div>
+      </section>
       <nav class="footer__menu">
-        <ui class="footer__menu-list">
+        <ul class="footer__menu-list">
           <li class="footer__menu-list-item"><a class="footer__menu-link-active">главная</a></li>
           <li class="footer__menu-list-item"><a class="footer__menu-link">посмотреть лоты</a></li>
           <li class="footer__menu-list-item"><a class="footer__menu-link">об аукционе</a></li>
-        </ui>
+        </ul>
       </nav>
-      <ui class="footer__social-list-item">
+      <ul class="footer__social-list-item">
         <li class="footer__social-link">
-            <img src="./images/yt.svg">
+            <img src="./images/yt.svg" alt="yt">
 
         </li>
         <li class="footer__social-link">
-            <img src="./images/vk.svg">
+            <img src="./images/vk.svg" alt="vk">
         </li>
         <li class="footer__social-icon">
-            <img src="./images/pinterest.svg">
+            <img src="./images/pinterest.svg" alt="pinterest">
         </li>
-      </ui>
+      </ul>
     </footer>
 
   </body>
