--- a/index.html
+++ b/index.html
@@ -13,34 +13,35 @@
       <nav class="nav">
         <ul class="menu">
           <li class="menu__option">
-          главная
+          <a href="#" class="link">главная</a>
           </li>
         <li class="menu__option">
-          посмотреть лоты
+          <a href="#" class="link">посмотреть лоты</a>
         </li>
         <li class="menu__option">
-          об аукционе
+          <a href="#" class="link">об аукционе</a>
         </li>
       </ul>
     </nav>
       <a class="header__logo_link">
         <img class ="header__logo" src="./images/logo-black.svg" alt="logo-black">
       </a>
-    <section class="address">
+    <address class="address">
       <a href="tel:+70000000">+9 999 555 5555</a>
       <br>
       <a href="mailto:mail@example.com">info@sobaka.ge</a>
-      <address>
+      <br>
         наб. Принсенграхт 263- <br>265, Амстердам
-      </address>
-    </section>
+    </address>
     </header>
-    <div class="cover">
-      <h1 class="cover__title">О<span class="cover__title__letter_shift">но</span> <span class="title__mid_line">те<span class="cover__title__letter_shift">бе</span></span> <span class="title__last_line"><span class="cover__title__letter_shift">н</span>адо</span></h1>
-      <h2 class="cover__subtitle">Аукцион вещей, в которые никто не верил</h2>
-      <button class="bet-button">Сделать ставку</button>
-    </div>
-    <main class="lots">
+    <main>
+    <section class="cover">
+      <h1 class="cover__title">О<span class="cover__title__letter_shift">но</span> <span class="title__mid_line">те<span class="cover__title__letter_shift">бе</span></span> <span class="title__bottom_line"><span class="cover__title__letter_shift">н</span>адо</span></h1>
+      <div class="cover__subtitle__box"><h2 class="cover__subtitle">Аукцион вещей, в которые никто не верил</h2>
+      <button type="button" class="bet-button">Сделать ставку</button>
+      </div>
+    </section>
+    <section class="lots">
       <h2 class="lots__heading">Лоты</h2>
       <ul class="lots__card-list">
         <li class="lots__card-list-item">
@@ -68,31 +69,31 @@
         </a>
       </li>
       </ul>
-      <p class="lots_more">посмотреть больше</p>
-    </main>
-    <div class="about">
+      <p class="lots_more"><a href="#" class="lots__link">посмотреть больше</a></p>
+    </section>
+    <section class="about">
       <div class="about__logo">
       </div>
-      <h3 class="main_text_raleway about__title">Об аукционе</h3>
-      <p class="main_text_raleway about__text ">Здесь вы не встретите очередное пафосное <span class="about__text_small_shift">собрание невероятно</span> дорогого <span class="about__text_special_shift ">антиквариата. Наши лоты вообще не должны были</span> <span class="about__text_small_shift">попасть</span> ни на один <span class="about__text_special_shift">аукцион. Потому что кому нужен дневник девочки-</span>подростка или <span class="about__text_small_shift">картина, которую может </span>нарисовать даже ребёнок? Кому нужны все эти странные <span class="about__text_small_shift">вещи,</span> созданные любителями?
+      <h3 class="main_text about__title">Об аукционе</h3>
+      <p class="main_text about__text ">Здесь вы не встретите очередное пафосное <span class="about__text_small_shift">собрание невероятно</span> дорогого <span class="about__text_special_shift ">антиквариата. Наши лоты вообще не должны были</span> <span class="about__text_small_shift">попасть</span> ни на один <span class="about__text_special_shift">аукцион. Потому что кому нужен дневник девочки-</span>подростка или <span class="about__text_small_shift">картина, которую может </span>нарисовать даже ребёнок? Кому нужны все эти странные <span class="about__text_small_shift">вещи,</span> созданные любителями?
       </p>
-        <p class="main_text_raleway about__text_last">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то <span class="about__text_heavy_shift">они</span> казались просто <span class="about__text_light_shift">неудачными</span>. Но, несмотря
+        <p class="main_text about__text_last">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то <span class="about__text_heavy_shift">они</span> казались просто <span class="about__text_light_shift">неудачными</span>. Но, несмотря
         на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно <span class="about__text_light_shift">представить современную культуру</span>. Когда в эти вещи не верил никто, продолжали верить <span class="about__text_light_shift">их создатели</span>. И сейчас эти лоты стали культовыми.
       </p>
-      </div>
-
+      </section>
+    </main>
     <footer>
-      <section class="address">
+      <address class="address">
         <a href="tel:+70000000">+9 999 555 5555</a>
         <br>
         <a href="mailto:mail@example.com">info@sobaka.ge</a>
-        <address>
+        <br>
           наб. Принсенграхт 263- <br>265, Амстердам
-        </address>
-      </section>
+        </br>
+      </address>
       <nav class="footer__menu">
         <ul class="footer__menu-list">
-          <li class="footer__menu-list-item"><a class="footer__menu-link-active">главная</a></li>
+          <li class="footer__menu-list-item"><a class="footer__menu-link footer__menu-link-active">главная</a></li>
           <li class="footer__menu-list-item"><a class="footer__menu-link">посмотреть лоты</a></li>
           <li class="footer__menu-list-item"><a class="footer__menu-link">об аукционе</a></li>
         </ul>
